Fixed icon align of the search button

--- a/tk/static/sass/search_bar.sass
+++ b/tk/static/sass/search_bar.sass
@@ -25,3 +25,4 @@
     border: $red .1em solid
     i
       color: white
+      display: block
